# hexed

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Config.cmake.in  INSTALL.md  LICENSE.txt  Makefile  README.md  benchmark.txt  cartdgConfig.hpp.in  config.cpp.in  hexed-config.cmake.in  hexed_config.hpp.in  hexed_py_config.py.in  perf.txt  perf091.txt  spatial_backup.hpp
.github/: build_test.yml
.github/workflows/: build_test.yml
cython/: hexed.pyx  hexed_cpp.pxd  hexed_py.pyx  setup.py.in
demo/: CMakeLists.txt  Makefile  cylinder.cpp  demo2d.cpp  demo3d.cpp  ellipsoid.cpp  main.cpp  sphere.cpp  wing_store.cpp
doc/: CMakeLists.txt  Eigen.doxytags  benchmarking.dox  boundary_conditions.dox  config.in  contributing.dox  contributing.md  conventions.dox  errors.dox  geom_fitting.dox  geometry_fitting.md  hil.dox  install.md  installation.dox  mainpage.dox  mesh_io.dox  namespace_hexed.dox  notation.md  occt_short.tag  parameters.dox  postprocessing.md  references.bib  running.dox  style.css  user_interface.dox  visualization.dox
docs/: annotated.html  annotated_dup.js  assert_8hpp.html  assert_8hpp.js  assert_8hpp__incl.map  assert_8hpp__incl.md5  auto__generate_8py.html  benchmarking.html  boundary_conditions.html  citelist.html  classBasis_1_1Basis-members.html  classBasis_1_1Basis.html  classBasis_1_1Basis.js  classes.html  classhexed_1_1Accessible__mesh-members.html  classhexed_1_1Accessible__mesh.html  classhexed_1_1Accessible__mesh.js  classhexed_1_1Accessible__mesh__inherit__graph.map  classhexed_1_1Accessible__mesh__inherit__graph.md5  classhexed_1_1Advection__state-members.html  classhexed_1_1Advection__state.html  classhexed_1_1Advection__state.js  classhexed_1_1Advection__state__inherit__graph.map  classhexed_1_1Advection__state__inherit__graph.md5  classhexed_1_1Annular__diffusion__test-members.html  classhexed_1_1Annular__diffusion__test.html  classhexed_1_1Annular__diffusion__test.js  classhexed_1_1Annular__diffusion__test__coll__graph.md5  classhexed_1_1Annular__diffusion__test__inherit__graph.map  classhexed_1_1Art__visc__coef-members.html  classhexed_1_1Art__visc__coef.html  classhexed_1_1Art__visc__coef.js  classhexed_1_1Art__visc__coef__coll__graph.map  classhexed_1_1Art__visc__coef__coll__graph.md5  classhexed_1_1Art__visc__forcing-members.html  classhexed_1_1Art__visc__forcing.html  classhexed_1_1Art__visc__forcing.js  classhexed_1_1Art__visc__forcing__coll__graph.map  classhexed_1_1Art__visc__forcing__inherit__graph.md5  classhexed_1_1Basis-members.html  (+1225 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  (+167 more)
include/: Accessible_mesh.hpp  Basis.hpp  Boundary_condition.hpp  Boundary_face.hpp  Boundary_func.hpp  Case.hil  Case.hpp  Characteristics.hpp  Command_parser.hpp  Deformed_element.hpp  Deformed_grid.hpp  Derivative.hpp  Domain_func.hpp  Domain_function.hpp  Element.hpp  Element_container.hpp  Element_func.hpp  Equidistant.hpp  Face_permutation.hpp  Fitted_boundary_condition.hpp  Gauss_legendre.hpp  Gauss_lobatto.hpp  Ghost_boundary_condition.hpp  Grid.hpp  Hanging_node_matcher.hpp  Hanging_vertex_matcher.hpp  History_monitor.hpp  Initializer.hpp  Interpreter.hpp  Iteration_status.hpp  Kernel_connection.hpp  Kernel_element.hpp  Kernel_mesh.hpp  Kernel_settings.hpp  Layer_sequence.hpp  Linear_equation.hpp  Local_advection_cartesian.hpp  Local_advection_deformed.hpp  Local_av0_cartesian.hpp  Local_av0_deformed.hpp  (+83 more)
kernels/: README.txt  static_math.hpp
python/: CMakeLists.txt  hexed_python.py  hexed_utils.py
samples/: crmhl-2dcut.igs  flap0.txt  flap1.txt  flap3.txt  hypersonic_cylinder.hil  main0.txt  main1.txt  main2.txt  main3.txt  multielement_airfoil.py  naca0012.py  slat0.txt  slat1.txt  slat2.txt  slat3.txt  vis_geom.py  wing_store.IGS  wing_store.STEP  wing_store.STL  wing_store.py
script/: Basis.py  Gauss_lobatto.cpp  Solution__get_kernel.cpp  auto_generate.py  benchmark.cpp.in  benchmark.py  benchmark.py.in  cartdg-post-process  cartdg-wrapped-post-process  colormaps.py  coords_example.py  doxygen_filter_pyx  eigenvalues.py  experiment.py  format.mcr.in  hexed-fit-geom  hexed-interp-geom  hexed-post-process  hexed-wrapped-post-process  hexed-wrapped-post-process.in  ode.py  post_process.py  smoothness_demo.py  translate.py  vis_benchmark.py  visualize_stability.py
src/: Accessible_mesh.cpp  Basis.cpp  Boundary_condition.cpp  Boundary_func.cpp  CMakeLists.txt  Case.cpp  Characteristics.cpp  Command_parser.cpp  Deformed_element.cpp  Deformed_grid.cpp  Domain_func.cpp  Domain_function.cpp  Element.cpp  Element_func.cpp  Equidistant.cpp  Fitted_boundary_condition.cpp  Gauss_lobatto.cpp  Gauss_max_cfl_diffusive.cpp  Ghost_boundary_condition.cpp  Grid.cpp  Grid__visualize.cpp  Hanging_node_matcher.cpp  Hanging_vertex_matcher.cpp  History_monitor.cpp  Initializer.cpp  Interpreter.cpp  Iteration_status.cpp  Kernel_settings.cpp  Layer_sequence.cpp  Linear_equation.cpp  Linearized.cpp  Lock.cpp  Occt.cpp  Occt_geom.cpp  Output_data.cpp  Physical_basis.cpp  Qpoint_func.cpp  Refined_face.cpp  Regular_grid.cpp  Simplex_geom.cpp  (+42 more)
test/: CMakeLists.txt  Makefile  ellipse.IGS  ellipse.STEP  ellipsoid.igs  ellipsoid.stp  test_Accessible_mesh.cpp  test_Basis.cpp  test_Boundary_condition.cpp  test_Characteristics.cpp  test_Command_parser.cpp  test_Deformed_element.cpp  test_Deformed_grid.cpp  test_Derivative.cpp  test_Domain_func.cpp  test_Element.cpp  test_Element_container.cpp  test_Face_permutation.cpp  test_Fitted_boundary_condition.cpp  test_Ghost_boundary_condition.cpp  test_Grid.cpp  test_Hanging_node_matcher.cpp  test_Hanging_vertex_matcher.cpp  test_History_monitor.cpp  test_Initializer.cpp  test_Interpreter.cpp  test_Iteration_status.cpp  test_Layer_sequence.cpp  test_Local_advection_cartesian.cpp  test_Local_advection_deformed.cpp  test_Local_av0_cartesian.cpp  test_Local_av_cartesian.cpp  test_Local_av_deformed.cpp  test_Local_cartesian.cpp  test_Local_deformed.cpp  test_Max_dt.cpp  test_Mcs_cartesian.cpp  test_Mcs_deformed.cpp  test_Mutual_ptr.cpp  test_Namespace.cpp  (+57 more)
(+128 files in other folders)
