add_executable(demo2d demo2d.cpp)
add_executable(demo3d demo3d.cpp)
add_executable(sphere sphere.cpp)
add_executable(ellipsoid ellipsoid.cpp)
target_link_libraries(demo2d PRIVATE hexed)
target_link_libraries(demo3d PRIVATE hexed)
target_link_libraries(sphere PRIVATE hexed)
target_link_libraries(ellipsoid PRIVATE hexed)
